--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@env": ["enviroments/*"],
+      "@env/*": ["environments/*"],
       "@meto/api-interfaces": ["libs/api-interfaces/src/index.ts"]
     }
   },
