--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "9.4.4",
     "@angular/animations": "^9.1.0",
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
@@ -38,12 +37,24 @@
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
-    "rxjs": "~6.5.4",
-    "zone.js": "^0.10.2",
     "@nestjs/common": "^6.8.3",
+    "@nestjs/config": "^0.4.2",
     "@nestjs/core": "^6.8.3",
+    "@nestjs/graphql": "^7.2.1",
     "@nestjs/platform-express": "^6.8.3",
-    "reflect-metadata": "^0.1.13"
+    "@nestjs/typeorm": "^7.0.0",
+    "@nrwl/angular": "9.4.4",
+    "apollo-server-express": "^2.14.2",
+    "graphql": "^15.0.0",
+    "graphql-tools": "^4.0.7",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "pg": "^8.1.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "~6.5.4",
+    "typeorm": "^0.2.24",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular/cli": "9.1.0",
@@ -69,6 +80,17 @@
     "@nrwl/cypress": "9.4.4",
     "@nrwl/node": "9.4.4",
     "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.8.3"
+    "@nestjs/testing": "^6.8.3",
+    "@nestjs/cli": "^7.0.0",
+    "@types/express": "^4.17.3",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "supertest": "^4.0.2",
+    "ts-loader": "^6.2.1",
+    "tsconfig-paths": "^3.9.0"
   }
 }
