--- a/angular.json
+++ b/angular.json
@@ -202,6 +202,32 @@
           }
         }
       }
+    },
+    "api-cruds": {
+      "root": "libs/api-cruds",
+      "sourceRoot": "libs/api-cruds/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/api-cruds/tsconfig.lib.json",
+              "libs/api-cruds/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/api-cruds/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/api-cruds/jest.config.js",
+            "tsConfig": "libs/api-cruds/tsconfig.spec.json",
+            "passWithNoTests": true
+          }
+        }
+      }
     }
   },
   "cli": {
