--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/graphql": "^7.2.1",
     "@nestjs/platform-express": "^6.8.3",
     "@nestjs/typeorm": "^7.0.0",
+    "@nestjsx/crud-typeorm": "^4.6.2",
     "@nrwl/angular": "9.4.4",
     "apollo-server-express": "^2.14.2",
     "graphql": "^15.0.0",
