Carlos - inicio - CARGOs

--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "@nestjs/graphql": "^7.2.1",
     "@nestjs/platform-express": "^6.8.3",
     "@nestjs/typeorm": "^7.0.0",
+    "@nestjsx/crud": "^4.6.2",
     "@nestjsx/crud-typeorm": "^4.6.2",
     "@nrwl/angular": "9.4.4",
     "apollo-server-express": "^2.14.2",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
     "graphql": "^15.0.0",
     "graphql-tools": "^4.0.7",
     "jsonwebtoken": "^8.5.1",
