--- a/angular.json
+++ b/angular.json
@@ -77,10 +77,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "apps/front/tsconfig.app.json",
-              "apps/front/tsconfig.spec.json"
-            ],
+            "tsConfig": ["apps/front/tsconfig.app.json", "apps/front/tsconfig.spec.json"],
             "exclude": ["**/node_modules/**", "!apps/front/**/*"]
           }
         },
@@ -160,10 +157,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "apps/api/tsconfig.app.json",
-              "apps/api/tsconfig.spec.json"
-            ],
+            "tsConfig": ["apps/api/tsconfig.app.json", "apps/api/tsconfig.spec.json"],
             "exclude": ["**/node_modules/**", "!apps/api/**/*"]
           }
         },
@@ -186,10 +180,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "libs/api-interfaces/tsconfig.lib.json",
-              "libs/api-interfaces/tsconfig.spec.json"
-            ],
+            "tsConfig": ["libs/api-interfaces/tsconfig.lib.json", "libs/api-interfaces/tsconfig.spec.json"],
             "exclude": ["**/node_modules/**", "!libs/api-interfaces/**/*"]
           }
         },
@@ -212,10 +203,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "libs/api-cruds/tsconfig.lib.json",
-              "libs/api-cruds/tsconfig.spec.json"
-            ],
+            "tsConfig": ["libs/api-cruds/tsconfig.lib.json", "libs/api-cruds/tsconfig.spec.json"],
             "exclude": ["**/node_modules/**", "!libs/api-cruds/**/*"]
           }
         },
@@ -224,6 +212,29 @@
           "options": {
             "jestConfig": "libs/api-cruds/jest.config.js",
             "tsConfig": "libs/api-cruds/tsconfig.spec.json",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "api-database": {
+      "root": "libs/api-database",
+      "sourceRoot": "libs/api-database/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["libs/api-database/tsconfig.lib.json", "libs/api-database/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**", "!libs/api-database/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/api-database/jest.config.js",
+            "tsConfig": "libs/api-database/tsconfig.spec.json",
             "passWithNoTests": true
           }
         }
