--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@env": ["enviroments/*"],
       "@env/*": ["environments/*"],
       "@meto/api-interfaces": ["libs/api-interfaces/src/index.ts"],
-      "@meto/api-cruds": ["libs/api-cruds/src/index.ts"]
+      "@meto/api-cruds": ["libs/api-cruds/src/index.ts"],
+      "@meto/api-database": ["libs/api-database/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
