--- a/angular.json
+++ b/angular.json
@@ -262,6 +262,29 @@
           }
         }
       }
+    },
+    "api-providers": {
+      "root": "libs/api-providers",
+      "sourceRoot": "libs/api-providers/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["libs/api-providers/tsconfig.lib.json", "libs/api-providers/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**", "!libs/api-providers/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/api-providers/jest.config.js",
+            "tsConfig": "libs/api-providers/tsconfig.spec.json",
+            "passWithNoTests": true
+          }
+        }
+      }
     }
   },
   "cli": {
