--- a/package.json
+++ b/package.json
@@ -67,40 +67,40 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.901.9",
     "@angular/cli": "9.1.9",
-    "@nrwl/workspace": "9.4.5",
-    "@types/node": "~14.0.13",
-    "dotenv": "8.2.0",
-    "ts-node": "~8.10.2",
-    "tslint": "~6.1.2",
-    "eslint": "7.3.1",
-    "typescript": "~3.9.5",
-    "prettier": "2.0.5",
-    "@nrwl/nest": "9.4.5",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^9.1.0",
-    "@angular-devkit/build-angular": "0.901.9",
-    "codelyzer": "~5.2.2",
-    "jest-preset-angular": "8.2.1",
-    "@nrwl/jest": "9.4.5",
-    "jest": "26.0.1",
-    "@types/jest": "26.0.0",
-    "ts-jest": "26.1.1",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "9.4.5",
-    "@nrwl/node": "9.4.5",
+    "@nestjs/cli": "^7.4.1",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.2.0",
-    "@nestjs/cli": "^7.4.1",
+    "@nrwl/cypress": "9.4.5",
+    "@nrwl/jest": "9.4.5",
+    "@nrwl/nest": "9.4.5",
+    "@nrwl/node": "9.4.5",
+    "@nrwl/workspace": "9.4.5",
     "@types/express": "^4.17.3",
+    "@types/jest": "26.0.0",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/node": "~14.0.13",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
+    "codelyzer": "~5.2.2",
+    "cypress": "^4.1.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.3.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "jest": "26.0.1",
+    "jest-preset-angular": "8.2.1",
+    "prettier": "2.0.5",
     "supertest": "^4.0.2",
+    "ts-jest": "26.1.1",
     "ts-loader": "^7.0.5",
-    "tsconfig-paths": "^3.9.0"
+    "ts-node": "~8.10.2",
+    "tsconfig-paths": "^3.9.0",
+    "tslint": "~6.1.2",
+    "typescript": "^3.8.3"
   }
 }
