Deploy para SURGE :-) limpei

--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Build application to production
         run: npm run build
 
-      - name: Envia para o SURGE
+      - name: Instala o SURGE
       - run: npm install -g surge
+      - name: Copia SURGE
       - run: surge dist/apps/front ${{ secrets.SURGE_DOMAIN_METODISTA_APP }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
