--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Instala o SURGE
       - run: npm install -g surge
       - name: Copia SURGE
-      - run: surge dist/apps/front ${{ secrets.SURGE_DOMAIN_METODISTA_APP }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
+      - run: surge 'dist/apps/front' ${{ secrets.SURGE_DOMAIN_METODISTA_APP }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
