FIX - surge deploy

--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -23,5 +23,6 @@ jobs:
 
       - name: Instala o SURGE
         run: npm install -g surge
-      - name: Copia SURGE
-        run: surge 'dist/apps/front' ${{ secrets.SURGE_DOMAIN_METODISTA_APP }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
+      - name: Copia DIST to SURGE
+        working-directory: dist/apps/front
+        run: surge ./ ${{ secrets.SURGE_DOMAIN_METODISTA_APP }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
