--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -3,6 +3,12 @@ name: BUILD SURGE METODISTA
 on:
   push:
     branches: [master]
+env:
+  API_METO_PORT: 3333
+  DB_METO_HOSTNAME: oficinacincodbdev.czevptjeohvo.us-east-2.rds.amazonaws.com
+  DB_METO_USERNAME: metodista-dev
+  DB_METO_PASSWORD: NQDqnUtJSmk25sMD
+  DB_METO_DATABASE: metodista_dev
 
 jobs:
   build_deploy:
@@ -18,11 +24,19 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build application to production
-        run: npm run build
+      - name: Build API
+        run: npm run build api
+      - name: Build APP
+        run: npm run build front
+
 
       - name: Instala o SURGE
         run: npm install -g surge
-      - name: Copia DIST to SURGE
+
+      - name: Copia API
+        working-directory: dist/apps/api
+        run: surge ./ ${{ secrets.SURGE_DOMAIN_METODISTA_API }} --token ${{ secrets.SURGE_TOKEN_METODISTA_API }}
+
+      - name: Copia APP
         working-directory: dist/apps/front
         run: surge ./ ${{ secrets.SURGE_DOMAIN_METODISTA_APP }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
