--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v1
 
-      - name: Cache NPM dependencies
+      - name: Cache NPM dependencies :-)
         uses: actions/cache@v1
         with:
           path: ~/.npm
