--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -43,8 +43,10 @@ jobs:
         working-directory: dist/apps/api
         run: surge ./ ${{ secrets.SURGE_DOMAIN_METODISTA_API }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
       - name: Levanta a API
+        commands:
+          - NODE_ENV=development
         working-directory: dist/apps/api
-        run: npm run start:prod
+        run: npm run start
 
       - name: Build APP
         run: npm run build front
