--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -44,7 +44,7 @@ jobs:
         run: surge ./ ${{ secrets.SURGE_DOMAIN_METODISTA_API }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
       - name: Levanta a API
         working-directory: dist/apps/api
-        run: npm run start
+        run: npm run ng serve api
 
       - name: Build APP
         run: npm run build front
