--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -36,15 +36,15 @@ jobs:
       - name: Instala o SURGE
         run: npm install -g surge
 
-      - name: Build API
-        run: npm run build api
+      # - name: Build API
+      #   run: npm run build api
 
-      - name: Copia API
-        working-directory: dist/apps/api
-        run: surge ./ ${{ secrets.SURGE_DOMAIN_METODISTA_API }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
-      - name: Levanta a API
-        working-directory: dist/apps/api
-        run: npm run ng serve api
+      # - name: Copia API
+      #   working-directory: dist/apps/api
+      #   run: surge ./ ${{ secrets.SURGE_DOMAIN_METODISTA_API }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
+      # - name: Levanta a API
+      #   working-directory: dist/apps/api
+      #   run: npm run ng serve api
 
       - name: Build APP
         run: npm run build front
