--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
-    "start": "ng serve",
-    "build-app": "ng build front",
-    "build-api": "ng build api",
+    "start": "npm run start api",
+    "build-app": "npm run build front",
+    "build-api": "npm run ng build api",
+    "build": "npm run ng build api",
+    "heroku-postbuild": "npm run start:dist" ,
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
