--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "nx",
 
     "nx": "nx",
-    "start": "npm run start api",
+    "start": " node dist/apps/api/main.js",
     "build-app": "npm run build front",
     "build-api": "npm run ng build api",
     "build": "npm run ng build api",
@@ -28,9 +28,9 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "heroku-postbuild": "npm run start:dist" ,
+    "heroku-postbuild": "ls apps -lsha" ,
     "heroku-prebuild": "echo This runs before Heroku installs dependencies.",
-    "heroku-cleanup": "pwd; ls -lsh;"
+    "heroku-cleanup": "pwd; ls -lsh; ls apps -lsh"
   },
   "private": true,
   "dependencies": {
