[work] added ngrx e trabalhando menu

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   "dependencies": {
     "@angular/animations": "^10.0.4",
     "@angular/cdk": "^10.1.0",
+    "@angular/cli": "10.0.3",
     "@angular/common": "^10.0.4",
     "@angular/compiler": "^10.0.4",
+    "@angular/compiler-cli": "10.0.4",
     "@angular/core": "^10.0.4",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^10.0.4",
@@ -57,7 +59,7 @@
     "@nestjs/typeorm": "^7.0.0",
     "@nestjsx/crud": "^4.6.2",
     "@nestjsx/crud-typeorm": "^4.6.2",
-    "@ngrx/effects": "9.2.0",
+    "@ngrx/effects": "^9.2.0",
     "@ngrx/router-store": "9.2.0",
     "@ngrx/store": "9.2.0",
     "@ngrx/store-devtools": "9.2.0",
@@ -71,12 +73,15 @@
     "angular-calendar": "0.28.16",
     "angular-in-memory-web-api": "0.11.0",
     "apollo-server-express": "^2.16.0",
+    "bcryptjs": "^2.4.3",
     "chart.js": "2.9.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "classlist.js": "1.1.20150312",
+    "crypto-random-string": "^3.2.0",
     "d3": "5.16.0",
     "date-fns": "2.15.0",
+    "email-templates": "^7.1.0",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.14",
     "jsonwebtoken": "^8.5.1",
@@ -88,17 +93,18 @@
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "9.1.0",
     "ngx-cookie-service": "3.0.4",
+    "nodemailer": "^6.4.10",
+    "nodemailer-sendgrid": "^1.0.3",
     "perfect-scrollbar": "1.5.0",
     "prismjs": "1.20.0",
+    "pug": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "~6.6.0",
     "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.24",
     "winston": "^3.3.3",
-    "zone.js": "^0.10.2",
-    "@angular/cli": "10.0.3",
-    "@angular/compiler-cli": "10.0.4"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1000.3",
