--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -22,16 +22,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v1
 
-      # - name: Cache NPM dependencies :-)
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: ~/.npm
-      #     key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: |
-      #       ${{ runner.OS }}-npm-cache-
+      - name: Cache NPM dependencies :-)
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-npm-cache-
 
-      # - name: Install NPM dependencies
-      #   run: npm install
+      - name: Install NPM dependencies
+        run: npm install
 
       - name: Instala o SURGE
         run: npm install -g surge
@@ -46,9 +46,13 @@ jobs:
       #   working-directory: dist/apps/api
       #   run: npm run ng serve api
 
-      # - name: Build APP
-      #   run: npm run build front
+      - name: Build APP
+        run: npm run build front
 
       - name: Copia APP
         working-directory: dist/apps/front
         run: surge ./ ${{ secrets.SURGE_DOMAIN_METODISTA_APP }} --token ${{ secrets.SURGE_TOKEN_METODISTA_APP }}
+
+      - name: Lista as coisas
+        working-directory: dist/apps/front
+        run: ls -lsah
