--- a/angular.json
+++ b/angular.json
@@ -277,6 +277,35 @@
           }
         }
       }
+    },
+    "app-core": {
+      "projectType": "library",
+      "root": "libs/app-core",
+      "sourceRoot": "libs/app-core/src",
+      "prefix": "meto",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["libs/app-core/tsconfig.lib.json", "libs/app-core/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**", "!libs/app-core/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/app-core/jest.config.js",
+            "tsConfig": "libs/app-core/tsconfig.spec.json",
+            "passWithNoTests": true,
+            "setupFile": "libs/app-core/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "style": "scss"
+        }
+      }
     }
   },
   "cli": {
